[gd_scene load_steps=38 format=3 uid="uid://cenulxvjf3twu"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_6hadp"]
[ext_resource type="PackedScene" uid="uid://ijdorn145jqa" path="res://scenes/visuals/bg.tscn" id="2_7v08p"]
[ext_resource type="PackedScene" uid="uid://uqnipnl0gf2h" path="res://scenes/characters/player.tscn" id="3_vw2ax"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="4_kosug"]
[ext_resource type="Script" path="res://scripts/upgrades_menu.gd" id="5_1eb74"]
[ext_resource type="Script" path="res://scripts/health.gd" id="5_w34v7"]
[ext_resource type="Script" path="res://scripts/abilities.gd" id="6_dknxt"]
[ext_resource type="Texture2D" uid="uid://b44bmaos68477" path="res://resources/sprite-ball.png" id="7_twpyn"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hgrf4"]
b = Vector2(0, 656)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_hm6rq"]
b = Vector2(0, 656)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_c1h7e"]
a = Vector2(1312, 0)
b = Vector2(-144, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_7fi7a"]
a = Vector2(1312, 0)
b = Vector2(-144, 0)

[sub_resource type="LabelSettings" id="LabelSettings_b7fl2"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_v5yew"]
font_size = 40

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_unarw"]
load_path = "res://.godot/imported/lightning-boots.png-b67891aa4000a081afaae1f3b74e0e8b.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_0cch1"]
font_size = 40

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6bvi2"]
load_path = "res://.godot/imported/lightning-boots.png-b67891aa4000a081afaae1f3b74e0e8b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_y5hh6"]
load_path = "res://.godot/imported/lightning-boots.png-b67891aa4000a081afaae1f3b74e0e8b.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_lgw42"]
font_size = 30

[sub_resource type="GDScript" id="GDScript_18xgo"]
resource_name = "experience"
script/source = "extends Node2D

var player
var maxBarWidth

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	maxBarWidth = $Full.size.x


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	$Label.text = \"Level \" + str($\"../../Player\".level)
	$Full.size.x = min(maxBarWidth*($\"../../Player\".experience/Global.levelUpExperience[$\"../../Player\".level]), maxBarWidth)
"

[sub_resource type="GDScript" id="GDScript_117ql"]
resource_name = "slimeball"
script/source = "extends Node2D

@export var abilityName = Global.abilities.SLIMEBALL
"

[sub_resource type="Animation" id="Animation_bxh8k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nnhdv"]
resource_name = "default"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o2r13"]
_data = {
"RESET": SubResource("Animation_bxh8k"),
"default": SubResource("Animation_nnhdv")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_0lu7o"]
atlas = ExtResource("7_twpyn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14wcm"]
atlas = ExtResource("7_twpyn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rocvd"]
atlas = ExtResource("7_twpyn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vw5x"]
atlas = ExtResource("7_twpyn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0jay"]
atlas = ExtResource("7_twpyn")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s77up"]
atlas = ExtResource("7_twpyn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00yc6"]
atlas = ExtResource("7_twpyn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_broxj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lu7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14wcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rocvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vw5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0jay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s77up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00yc6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_87jqc"]
resource_name = "time"
script/source = "extends Node2D

var time = 0.0

var previousTextLength = 0

func roundToDecimal(num, digit):
	return round(num * pow(10.0, digit)) / pow(10.0, digit)

func _process(delta: float) -> void:
	time += delta
	$Label.text = \"%.2f\" % time
	$Label.position.x = 1920.0/2.0 - $Label.size.x/2.0
"

[sub_resource type="LabelSettings" id="LabelSettings_mvf48"]
font_size = 50

[sub_resource type="GDScript" id="GDScript_ic0eh"]
resource_name = "stats"
script/source = "extends Node2D

var damage: Label
var shootingRange: Label
var speed: Label
var shootingSpeed: Label

var player: CharacterBody2D

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	player = $\"../../Player\"
	damage = $Damage
	shootingRange = $Range
	speed = $Speed
	shootingSpeed = $ShootSpeed

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	damage.text = \"Damage: \" + str(player.playerDamageMultiplier) + \"x\"
	shootingRange.text = \"Range: \" + str(player.playerRangeMultiplier) + \"x\"
	speed.text = \"Speed: \" + str(player.playerSpeed)
	shootingSpeed.text = \"S.Speed: \" + str(player.playerShootingFrequencyMultiplier) + \"x\"
"

[sub_resource type="LabelSettings" id="LabelSettings_qw1ur"]
font_size = 30

[sub_resource type="GDScript" id="GDScript_s4qb4"]
resource_name = "items"
script/source = "extends Node2D

const MAX_ITEMS_PER_ROW = 6
const ITEM_SIZE = 40.3

var player: CharacterBody2D

func _ready():
	player = get_node(\"../../Player\")

func updateInventory():
	for currChild in get_children():
		currChild.queue_free()
	for i in range(0, len(player.items)):
		var currItem: Global.Item = player.items[i]
		var sprite = Sprite2D.new()
		var texture = load(currItem.Icon) as Texture2D
		if texture:
			sprite.texture = texture
		else:
			print(\"Error: Couldn't load image in path '\", currItem.Icon, \"'\")
		self.add_child(sprite)
		sprite.scale = Vector2(0.1, 0.1)
		var positionX = i % MAX_ITEMS_PER_ROW * ITEM_SIZE
		var positionY = int(i / MAX_ITEMS_PER_ROW) * ITEM_SIZE
		sprite.position = Vector2(positionX, positionY)
"

[node name="World" type="Node2D"]
script = ExtResource("1_6hadp")

[node name="Background" parent="." instance=ExtResource("2_7v08p")]

[node name="Player" parent="." instance=ExtResource("3_vw2ax")]
position = Vector2(768, 328)
platform_floor_layers = 4294901760

[node name="collisions" type="StaticBody2D" parent="."]

[node name="leftBorder" type="CollisionShape2D" parent="collisions"]
position = Vector2(8, 8)
shape = SubResource("SegmentShape2D_hgrf4")

[node name="rightBorder" type="CollisionShape2D" parent="collisions"]
position = Vector2(1464, 8)
shape = SubResource("SegmentShape2D_hm6rq")

[node name="bottomBorder" type="CollisionShape2D" parent="collisions"]
position = Vector2(152, 664)
shape = SubResource("SegmentShape2D_c1h7e")

[node name="topBorder" type="CollisionShape2D" parent="collisions"]
position = Vector2(152, 8)
shape = SubResource("SegmentShape2D_7fi7a")

[node name="Mobs" type="Node2D" parent="."]

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("4_kosug")

[node name="bg" type="ColorRect" parent="PauseMenu"]
z_index = -1
offset_left = -1191.0
offset_top = -630.0
offset_right = 2900.0
offset_bottom = 3236.0
color = Color(0.154876, 0.154876, 0.154876, 0.541176)

[node name="PAUSED" type="Label" parent="PauseMenu"]
offset_left = 806.0
offset_top = 238.0
offset_right = 1115.0
offset_bottom = 348.0
text = "PAUSED"
label_settings = SubResource("LabelSettings_b7fl2")

[node name="Continue" type="Button" parent="PauseMenu"]
offset_left = 891.0
offset_top = 453.0
offset_right = 1027.0
offset_bottom = 523.0
text = "Continue
"

[node name="Quit" type="Button" parent="PauseMenu"]
offset_left = 892.0
offset_top = 540.0
offset_right = 1028.0
offset_bottom = 610.0
text = "Quit
"

[node name="UpgradesMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("5_1eb74")

[node name="bg" type="ColorRect" parent="UpgradesMenu"]
z_index = -1
offset_left = -1191.0
offset_top = -630.0
offset_right = 2900.0
offset_bottom = 3236.0
color = Color(0.154876, 0.154876, 0.154876, 0.541176)

[node name="Text" type="Node2D" parent="UpgradesMenu"]
position = Vector2(-1191, -862)

[node name="Title" type="Label" parent="UpgradesMenu/Text"]
offset_left = 1985.5
offset_top = 868.0
offset_right = 2316.5
offset_bottom = 978.0
text = "Level Up"
label_settings = SubResource("LabelSettings_b7fl2")

[node name="Subtitle" type="Label" parent="UpgradesMenu/Text"]
offset_left = 1964.5
offset_top = 965.0
offset_right = 2337.5
offset_bottom = 1075.0
text = "Choose an upgrade"
label_settings = SubResource("LabelSettings_v5yew")

[node name="Items" type="Node2D" parent="UpgradesMenu"]
position = Vector2(367.5, 178)

[node name="Item1" type="Node2D" parent="UpgradesMenu/Items"]

[node name="Button" type="Button" parent="UpgradesMenu/Items/Item1"]
offset_right = 403.0
offset_bottom = 403.0
icon = SubResource("CompressedTexture2D_unarw")

[node name="Title" type="Label" parent="UpgradesMenu/Items/Item1"]
z_index = 1
offset_top = 403.0
offset_right = 403.0
offset_bottom = 472.0
text = "Title"
label_settings = SubResource("LabelSettings_0cch1")
horizontal_alignment = 1

[node name="Item2" type="Node2D" parent="UpgradesMenu/Items"]
position = Vector2(403, 0)

[node name="Button" type="Button" parent="UpgradesMenu/Items/Item2"]
offset_right = 403.0
offset_bottom = 403.0
icon = SubResource("CompressedTexture2D_6bvi2")

[node name="Title" type="Label" parent="UpgradesMenu/Items/Item2"]
offset_top = 403.0
offset_right = 403.0
offset_bottom = 472.0
text = "Title"
label_settings = SubResource("LabelSettings_0cch1")
horizontal_alignment = 1

[node name="Item3" type="Node2D" parent="UpgradesMenu/Items"]
position = Vector2(806, 0)

[node name="Button" type="Button" parent="UpgradesMenu/Items/Item3"]
offset_right = 403.0
offset_bottom = 403.0
icon = SubResource("CompressedTexture2D_y5hh6")

[node name="Title" type="Label" parent="UpgradesMenu/Items/Item3"]
offset_top = 403.0
offset_right = 403.0
offset_bottom = 472.0
text = "Title"
label_settings = SubResource("LabelSettings_0cch1")
horizontal_alignment = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Health" type="Node2D" parent="UI"]
script = ExtResource("5_w34v7")

[node name="Full" type="ColorRect" parent="UI/Health"]
z_index = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 56.0
color = Color(1, 0, 0, 1)

[node name="Empty" type="ColorRect" parent="UI/Health"]
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 56.0
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Label" type="Label" parent="UI/Health"]
z_index = 2
offset_left = 139.0
offset_top = 10.0
offset_right = 253.0
offset_bottom = 52.0
text = "100/100"
label_settings = SubResource("LabelSettings_lgw42")

[node name="Exp" type="Node2D" parent="UI"]
position = Vector2(0, 54)
script = SubResource("GDScript_18xgo")

[node name="Full" type="ColorRect" parent="UI/Exp"]
z_index = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 56.0
color = Color(0.145298, 0.781559, 3.85046e-07, 1)

[node name="Empty" type="ColorRect" parent="UI/Exp"]
offset_left = 8.0
offset_top = 8.0
offset_right = 376.0
offset_bottom = 56.0
color = Color(0.252028, 0.252028, 0.252028, 1)

[node name="Label" type="Label" parent="UI/Exp"]
z_index = 2
offset_left = 139.0
offset_top = 10.0
offset_right = 253.0
offset_bottom = 52.0
text = "100/100"
label_settings = SubResource("LabelSettings_lgw42")

[node name="Abilities" type="Node2D" parent="UI"]
script = ExtResource("6_dknxt")

[node name="SlimeBall" type="Node2D" parent="UI/Abilities"]
script = SubResource("GDScript_117ql")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Abilities/SlimeBall"]
libraries = {
"": SubResource("AnimationLibrary_o2r13")
}
autoplay = "default"

[node name="Back" type="ColorRect" parent="UI/Abilities/SlimeBall"]
offset_left = 25.0
offset_top = 941.0
offset_right = 145.0
offset_bottom = 1061.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/Abilities/SlimeBall"]
position = Vector2(83, 1007)
scale = Vector2(5.15625, 5.15625)
sprite_frames = SubResource("SpriteFrames_broxj")

[node name="Front" type="ColorRect" parent="UI/Abilities/SlimeBall"]
offset_left = 25.0
offset_top = 941.0
offset_right = 145.0
offset_bottom = 1061.0
color = Color(0.101868, 0.101868, 0.101868, 0.478431)

[node name="Time" type="Node2D" parent="UI"]
script = SubResource("GDScript_87jqc")

[node name="Label" type="Label" parent="UI/Time"]
offset_left = 911.0
offset_top = 5.0
offset_right = 940.0
offset_bottom = 74.0
text = "0"
label_settings = SubResource("LabelSettings_mvf48")

[node name="Stats" type="Node2D" parent="UI"]
position = Vector2(1682, 14)
script = SubResource("GDScript_ic0eh")

[node name="Damage" type="Label" parent="UI/Stats"]
offset_right = 40.0
offset_bottom = 23.0
text = "Damage: 0"
label_settings = SubResource("LabelSettings_qw1ur")

[node name="Range" type="Label" parent="UI/Stats"]
offset_top = 35.0
offset_right = 153.0
offset_bottom = 77.0
text = "Range: 0
"
label_settings = SubResource("LabelSettings_qw1ur")

[node name="Speed" type="Label" parent="UI/Stats"]
offset_top = 70.0
offset_right = 153.0
offset_bottom = 112.0
text = "Speed: 0
"
label_settings = SubResource("LabelSettings_qw1ur")

[node name="ShootSpeed" type="Label" parent="UI/Stats"]
offset_top = 105.0
offset_right = 153.0
offset_bottom = 147.0
text = "ShootSpeed: 0"
label_settings = SubResource("LabelSettings_qw1ur")

[node name="Items" type="Node2D" parent="UI"]
position = Vector2(1699, 177)
script = SubResource("GDScript_s4qb4")

[connection signal="pressed" from="PauseMenu/Continue" to="PauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/Quit" to="PauseMenu" method="_on_quit_pressed"]
[connection signal="pressed" from="UpgradesMenu/Items/Item1/Button" to="UpgradesMenu" method="_on_button_1_pressed"]
[connection signal="pressed" from="UpgradesMenu/Items/Item2/Button" to="UpgradesMenu" method="_on_button_2_pressed"]
[connection signal="pressed" from="UpgradesMenu/Items/Item3/Button" to="UpgradesMenu" method="_on_button_3_pressed"]
